--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "next": "^12.1.6",
     "node-fetch": "^3.3.1",
     "openai": "^3.0.0",
